Version 8.8
Add `#:param` option to `->i`

Version 8.7
Use Unicode 14.0 for character and string operations
Add grapheme operations, such as `string-grapheme-count`

Version 8.6, July 2022
Change build to use Zuo
Add `equal-always?`
Add stencil vectors
Add support for Arm64 Windows
Other bug repairs and other changes noted in the documentation

Version 8.5, April 2022
Add a `-y`/`--make` flag to automatically create/update ".zo"s
Add error-message realms
Add `read-syntax-accept-graph`
Change `make-temporary-file` to have keyword arguments
Change `for` to support `#:splice` clauses
Enable user-specific adjustment of an installation name
Racket CS: support pb backend
Other bug repairs and other changes noted in the documentation

Version 8.4, January 2022
Add `file-or-directory-stat`
Expander: add "portal" syntax
Add `#%terminal` primitive module for editor support; using this,
 "xrepl" and "expeditor" provide an improved REPL by default
Change `set/c` to support random generation
CS: faster multiplication and division for some numbers
Other bug repairs and other changes noted in the documentation

Version 8.3, October 2021
Expander: remove syntax arming and disarming in favor of a simpler
 system of protected syntax operations
Expander: change internal-definition contexts to have an
 outside-edge scope and track their own use-site scopes
Expander: add `require` and `provide` support for binding spaces
Expander: don't propagate "original" from macro input to output,
 which restores the intended behavior as it worked before v7.0
Windows: repair single-instance executable mode
Windows: fix path handling to treat `*` and `?` as special
Change `unzip` to report errors for ill-formed archives, instead
 of silently ignoring certain errors
Add `error-syntax->string-handler`
Places: use `current-directory` value in created place
Other bug repairs and other changes noted in the documentation

Version 8.2, July 2021
CS: faster exact-rational arithmetic